[gd_scene load_steps=23 format=3 uid="uid://beqk181p2his6"]

[ext_resource type="Script" path="res://Scene/ricotero.gd" id="1_u2xi6"]
[ext_resource type="AudioStream" uid="uid://cqvei1yh75n6j" path="res://audio/jump.wav" id="2_l2m2y"]
[ext_resource type="Texture2D" uid="uid://bnjkusvthsrya" path="res://mainCharacter/Ricotero sprite.png" id="3_qolmp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ef17e"]
atlas = ExtResource("3_qolmp")
region = Rect2(0, 164, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikepn"]
atlas = ExtResource("3_qolmp")
region = Rect2(45, 164, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j8qr"]
atlas = ExtResource("3_qolmp")
region = Rect2(90, 164, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d21s"]
atlas = ExtResource("3_qolmp")
region = Rect2(135, 164, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_6he1w"]
atlas = ExtResource("3_qolmp")
region = Rect2(180, 164, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvd14"]
atlas = ExtResource("3_qolmp")
region = Rect2(225, 164, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur0wg"]
atlas = ExtResource("3_qolmp")
region = Rect2(0, 0, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgxmb"]
atlas = ExtResource("3_qolmp")
region = Rect2(0, 82, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sfy8"]
atlas = ExtResource("3_qolmp")
region = Rect2(45, 82, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqjwy"]
atlas = ExtResource("3_qolmp")
region = Rect2(90, 82, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojrt2"]
atlas = ExtResource("3_qolmp")
region = Rect2(0, 41, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_o525a"]
atlas = ExtResource("3_qolmp")
region = Rect2(45, 41, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdm7b"]
atlas = ExtResource("3_qolmp")
region = Rect2(90, 41, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hh2n"]
atlas = ExtResource("3_qolmp")
region = Rect2(135, 41, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj2hb"]
atlas = ExtResource("3_qolmp")
region = Rect2(180, 41, 45, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxc1b"]
atlas = ExtResource("3_qolmp")
region = Rect2(225, 41, 45, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_v1gna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef17e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikepn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j8qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d21s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6he1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvd14")
}],
"loop": true,
"name": &"duck",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur0wg")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgxmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sfy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqjwy")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojrt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o525a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdm7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hh2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj2hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxc1b")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdmi4"]
size = Vector2(6.66667, 35.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnb16"]
size = Vector2(9.33333, 28.9167)

[node name="Ricotero" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(3, 3)
script = ExtResource("1_u2xi6")

[node name="Animation" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, 0.333333)
sprite_frames = SubResource("SpriteFrames_v1gna")
animation = &"run"
autoplay = "idle"

[node name="runCol" type="CollisionShape2D" parent="."]
position = Vector2(-10.6667, 2.33333)
shape = SubResource("RectangleShape2D_tdmi4")

[node name="duckCol" type="CollisionShape2D" parent="."]
position = Vector2(-5, 6.20833)
shape = SubResource("RectangleShape2D_fnb16")

[node name="jumpSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_l2m2y")
volume_db = -25.0
